refactor: rename ApiController to MusicController
